# rqbit

./: Cargo.toml
crates/librqbit/src/: tracing_subscriber_config_utils.rs
mobile/: pubspec.yaml
mobile/integration_test/: simple_test.dart
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/src/config/: config.config.dart  config.dart
mobile/lib/src/rest_client/: rest_client.dart
mobile/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
mobile/lib/src/rust/api/rqbit/: config.dart  main.dart
mobile/linux/flutter/: generated_plugins.cmake
mobile/rust/: Cargo.toml
mobile/rust/src/: frb_generated.rs
mobile/rust/src/api/: mod.rs
mobile/rust/src/api/rqbit/: config.rs  main.rs  mod.rs
mobile/rust_builder/: pubspec.yaml
mobile/rust_builder/android/: build.gradle  settings.gradle
mobile/rust_builder/android/src/main/: AndroidManifest.xml
mobile/rust_builder/ios/: rust_lib_mobile.podspec
mobile/rust_builder/linux/: CMakeLists.txt
mobile/rust_builder/macos/: rust_lib_mobile.podspec
mobile/rust_builder/windows/: CMakeLists.txt
mobile/windows/flutter/: generated_plugins.cmake
